# Mocha-Virtual-Machine

./: .gitignore  CMakeLists.txt  README.md  endianness.cpp  endianness.h  executor.cpp  executor.h  executorfuncs.cpp  executorfuncs.h  main.cpp  memory.cpp  memory.h  nucleus.h  opcodes.h  types.h
src/: Object.cpp  Object.h  endianness.cpp  endianness.h  ops.h  types.h  vm_structs.cpp  vm_structs.h
